Fix bug of horizontal scrolling

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -648,11 +648,13 @@ section {
     box-shadow: 0 .5rem 1rem rgba(0, 0, 0, .2);
     transition: .25s ease;
     transition-delay: .25s;
+    overflow-x: hidden;
   }
 
   .navbar.active {
     left: 0;
     transition-delay: 0s;
+    overflow-x: hidden;
   }
 
   .navbar a {
